Comments added and edited

--- a/nd025.ipynb
+++ b/nd025.ipynb
@@ -5,7 +5,13 @@
    "metadata": {},
    "source": [
     "# Udacity nd025 Blog Project\n",
-    "## Idea: Have a look at the Airbnb listings and get a better understanding of hosts, their offers and ratings."
+    "## Idea: Have a look at the Airbnb listings and get a better understanding of hosts and ratings.\n",
+    "1. What influences average review scores?\n",
+    "1. Superhost and hosts: In what way are they different?\n",
+    "  * Do their review scores differ?\n",
+    "  * Which amneties are offered?\n",
+    "  * Are superhosts super-expensive?\n",
+    "3. What influences the superhost staus?"
    ]
   },
   {
@@ -15,8 +21,7 @@
    "outputs": [],
    "source": [
     "# Import the neccessary libraries\n",
-    "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
     "import pandas as pd\n",
     "import shap\n",
     "import datetime as dt\n",
@@ -635,7 +640,7 @@
     "* In this context it's only interesting whether hosts made a *host_about* statement or not.\n",
     "* *host_verifications* contains lists of categorical features that needs to be split and converted into dummy/indicator variable.\n",
     "* *host_is_superhost*, *host_has_profile_pic*, *host_identity_verified*, *require_guest_profile_picture*, *require_guest_phone_verification*: Replace t with 1 and f with 0.\n",
-    "* *host_response_time*, *host_response_rate*:Drop rows where it's missing to be on the safe side.\n",
+    "* *host_response_time*, *host_response_rate*: Drop rows where it's missing to be on the safe side.\n",
     "* *host_response_time* is a categorical feature that needs to be converted into dummy/indicator variable.\n",
     "* *host_response_rate* must be converted from string to float\n",
     "\n",
@@ -701,10 +706,10 @@
     "# Perform a one-hot-encoding with the different kinds of amenities \n",
     "hosts_and_offers['amenities'] = hosts_and_offers['amenities'].str.replace(r'[\\{\\}\\\"]', '',regex=True).str.split(',')\n",
     "hosts_and_offers = hosts_and_offers.drop('amenities', axis=1).join(\n",
-    "                                                        pd.get_dummies(\n",
-    "                                                            pd.DataFrame(hosts_and_offers.amenities.tolist()).stack(), prefix='amnety'\n",
-    "                                                        ).astype(int).groupby(level=0).sum()\n",
-    "                                                    )\n",
+    "                                                                    pd.get_dummies(\n",
+    "                                                                                    pd.DataFrame(hosts_and_offers.amenities.tolist()).stack(), prefix='amnety'\n",
+    "                                                                                    ).astype(int).groupby(level=0).sum()\n",
+    "                                                                    )\n",
     "\n",
     "hosts_and_offers.drop(columns=['square_feet'], inplace=True)\n",
     "\n",
@@ -752,7 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*bathrooms*, *bedrooms* and *beds* still have NaN values. Let's replace them by 0."
+    "*bathrooms*, *bedrooms* and *beds* still have NaN values. Replace them by 0 to indicate that they are not offered."
    ]
   },
   {
@@ -3299,7 +3304,7 @@
     "# Define the feature matrix and the lables\n",
     "X, y = hosts_and_offers.drop(columns='review_scores_rating'), hosts_and_offers['review_scores_rating']\n",
     "\n",
-    "# Split the data into a training and test set. Use 20 % of the data for testing.\n",
+    "# Split the data into a training and test set. Use 10 % of the data for testing.\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)\n",
     "\n",
     "# Instantiate the model\n",
@@ -3476,7 +3481,7 @@
     "We can see that the ratings of superhosts are centered in the range 90 to 100. That supports AirBnB's explaination that the status is earned by postive reviews.\n",
     "\n",
     "#### Amneties offered by superhosts\n",
-    "To see differences between superhosts and the others we take a look at the amneties offered by them."
+    "To see differences between superhosts and others hosts we take a look at the amneties offered by them."
    ]
   },
   {
@@ -3582,7 +3587,7 @@
     "superhosts = hosts_and_offers[(hosts_and_offers.host_is_superhost == 1)]\n",
     "not_superhosts = hosts_and_offers[(hosts_and_offers.host_is_superhost == 0)]\n",
     "\n",
-    "# The amnity columns are binary. So just the mean will be the percentage an amnety is offered. \n",
+    "# The amnity columns are binary. So the mean will be the percentage an amnety is offered. \n",
     "diff_amneties = pd.concat([pd.DataFrame(columns=['Superhosts'], data=superhosts.filter(like='amnety').mean()),\n",
     "                           pd.DataFrame(columns=['Non-superhosts'], data=not_superhosts.filter(like='amnety').mean())], axis=1)\n",
     "\n",
@@ -3788,18 +3793,29 @@
     }
    ],
    "source": [
+    "# Create a dataframe with the data to analyze\n",
     "df = hosts_and_offers[['review_scores_rating', 'host_is_superhost', 'price']].copy()\n",
+    "\n",
+    "# Add a column 'price range' showing the price range for each columns\n",
     "df['price range'] = pd.qcut(x=df['price'], q=5)\n",
+    "\n",
+    "# Create a dataframe that contains the number of liststings in each group\n",
     "count = pd.DataFrame(pd.value_counts(df['price range']))\n",
     "count.rename(columns={'price range': 'Number of listings'}, inplace=True)\n",
+    "\n",
+    "# Rename a few columns and group by price range\n",
     "df.rename(columns={'review_scores_rating': 'Average rating', 'host_is_superhost': 'Share of superhosts'}, inplace=True)\n",
     "df = df.groupby(by='price range').mean().drop('price', axis=1)\n",
+    "\n",
+    "# Attach the count dataframe\n",
     "df = pd.concat([df, count], axis=1)\n",
+    "\n",
+    "# Make the table pretty\n",
     "df.index.name='Price range'\n",
     "df.style.format({\n",
     "                    'Average rating': '{:,.2f}'.format,\n",
     "                    'Share of superhosts': '{:,.0%}'.format,\n",
-    "                })\n"
+    "                })"
    ]
   },
   {
@@ -3942,11 +3958,6 @@
     "\n",
     "We can see that many ratings, high scores, and a high response rate improve the chance of becoming a superhosts. That fully matches AirBnB's explaination."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
